objects/tffa__GoogleCloudPlatform__mdt.object
<CustomObject>
    <description>Will contain configuration for google cloud platform authentication</description>
    <fields>
        <fullName>tffa__AudienceClaim__c</fullName>
        <description>The audience claim identifies the recipients that the JWT is intended for</description>
        <label>AudienceClaim</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tffa__CertificateName__c</fullName>
        <description>Certificate name used to exchange JWT token</description>
        <label>Certificate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IssueClaim__c</fullName>
        <description>The issue claim identifies the recipients that the JWT is intended for</description>
        <label>Issue Claim</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ProjectId__c</fullName>
        <description>Unique id of the project as identified by the google cloud platform</description>
        <label>Project Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Scope__c</fullName>
        <description>Scope is a mechanism in OAuth 2.0 to limit an application&apos;s access to a user&apos;s account.</description>
        <label>Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__SubjectClaim__c</fullName>
        <description>The subject claim identifies the recipients that the JWT is intended for</description>
        <label>Subject Claim</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Value__c</fullName>
        <description>Value of the attribute</description>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Google Cloud Platform Configuration</label>
    <pluralLabel>Google Cloud Platform Configurations</pluralLabel>
</CustomObject>